[gd_scene load_steps=3 format=3 uid="uid://d3avjgb0khve8"]

[ext_resource type="Script" path="res://LakeSpot.gd" id="1_0jxll"]
[ext_resource type="Texture2D" uid="uid://beweay0fukvb6" path="res://art/Lake background_001 (1).jpg" id="2_wvb4n"]

[node name="LakeSpot" type="Node2D"]
script = ExtResource("1_0jxll")

[node name="LakeBackground" type="Sprite2D" parent="."]
position = Vector2(576, 310)
scale = Vector2(0.72, 0.556667)
texture = ExtResource("2_wvb4n")

[node name="CastLine" type="Button" parent="."]
offset_left = 1008.0
offset_top = 552.0
offset_right = 1120.0
offset_bottom = 595.0
theme_override_font_sizes/font_size = 25
text = "Cast line"

[node name="FishBiteTimer" type="Timer" parent="."]

[node name="ReactionTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="BiteCueLabel" type="Label" parent="."]
offset_left = 520.0
offset_top = 280.0
offset_right = 630.0
offset_bottom = 352.0
theme_override_font_sizes/font_size = 50
text = "Bite!"

[node name="MissedFishLabel" type="Label" parent="."]
visible = false
offset_left = 464.0
offset_top = 280.0
offset_right = 693.0
offset_bottom = 352.0
theme_override_font_sizes/font_size = 50
text = "It got away!"

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="InventoryButton" type="Button" parent="."]
offset_left = 32.0
offset_top = 128.0
offset_right = 156.0
offset_bottom = 171.0
theme_override_font_sizes/font_size = 25
text = "Inventory"

[node name="InventoryPanel" type="Panel" parent="."]
visible = false
offset_left = 24.0
offset_top = 168.0
offset_right = 496.0
offset_bottom = 616.0

[node name="BackButton" type="Button" parent="."]
offset_left = 32.0
offset_top = 552.0
offset_right = 98.0
offset_bottom = 595.0
theme_override_font_sizes/font_size = 25
text = "Back"

[connection signal="pressed" from="CastLine" to="." method="_on_cast_line_pressed"]
[connection signal="timeout" from="FishBiteTimer" to="." method="_on_fish_bite_timer_timeout"]
[connection signal="timeout" from="ReactionTimer" to="." method="_on_reaction_timer_timeout"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
[connection signal="pressed" from="InventoryButton" to="." method="_on_InventoryButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
